web.xml Updated. Hospital class updated. hospitaService class updated.

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -18,7 +18,7 @@
   
   <servlet-mapping>   
 	  <servlet-name>Jersey Web Application</servlet-name>   
-	  <url-pattern>/Services/*</url-pattern>  
+	  <url-pattern>/api/*</url-pattern>  
   </servlet-mapping> 
   
 </web-app>
