--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 			<version>2.1.1</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-jackson</artifactId>
+			<version>2.13</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.glassfish.jersey.inject</groupId>
